--- a/src/css/_slideshow.scss
+++ b/src/css/_slideshow.scss
@@ -4,15 +4,15 @@
   height:200px;
   margin: 0;
   padding: 0;
-
-
 }
 .galleryContainer .slideShowContainer{
   width: 100%;
-  height: 90%;
+  height: 100%;
   overflow: hidden;
   background-color: gainsboro;
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .galleryContainer .slideShowContainer .imageHolder{
